dfir_rs/tests/compile-fail-stable/surface_singleton_adjacent.stderr
error: Adjacent `handoff()` operators are not allowed.
 --> tests/compile-fail-stable/surface_singleton_adjacent.rs:5:46
  |
5 |         source_iter(0..10) -> singleton() -> singleton() -> for_each(std::mem::drop);
  |                                              ^^^^^^^^^
